loaded packages and tokenized data

--- a/src/Sonnets/Training/Sonnet_generator.ipynb
+++ b/src/Sonnets/Training/Sonnet_generator.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "source": [
-    "### Loading the data\n",
+    "### 1.0 Loading the data\n",
     "Let's start with loading the actual data and seeing a small sample of it, say the first 300 characters."
    ],
    "cell_type": "markdown",
@@ -29,7 +29,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 17,
+   "execution_count": 1,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -37,12 +37,96 @@
       "text/plain": "\"FROM fairest creatures we desire increase,\\nThat thereby beauty's rose might never die,\\nBut as the riper should by time decease,\\nHis tender heir might bear his memory:\\nBut thou, contracted to thine own bright eyes,\\nFeed'st thy light'st flame with self-substantial fuel,\\nMaking a famine where abundance\""
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 1
     }
    ]
   },
   {
-   "source": [],
+   "source": [
+    "### 2.0 Load the packages\n",
+    "Remeber to check the requirements file for packages"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense, Dropout, Bidirectional\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras import regularizers \n",
+    "import tensorflow.keras.utils as ku \n",
+    "import numpy as np "
+   ]
+  },
+  {
+   "source": [
+    "Checking the tenorflow version"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2.1.0\n"
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "print(tf.__version__)"
+   ]
+  },
+  {
+   "source": [
+    "### 3.0 Tokenizing the traing data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Total number of words in corpus: 3211\n"
+    }
+   ],
+   "source": [
+    "tokenizer = Tokenizer()\n",
+    "corpus = data.lower().split(\"\\n\")\n",
+    "tokenizer.fit_on_texts(corpus)\n",
+    "total_words = len(tokenizer.word_index) + 1\n",
+    "print('Total number of words in corpus:',total_words)"
+   ]
+  },
+  {
+   "source": [
+    "### 4.0 Preparing the data for training:\n",
+    "This is the most important part of this entire script and can be broadly split into 5 steps. So let's get into it shall we,\n",
+    " #### 4.1) Converting text to sequences.\n",
+    " #### 4.2) Creating the N_gram sequences.\n",
+    " #### 4.3) Finding the max sequence length and the padding the rest.\n",
+    " #### 4.4) Creating the predictors and the labels."
+   ],
    "cell_type": "markdown",
    "metadata": {}
   }
