added some formatting

--- a/src/Sonnets/Training/Sonnet_generator.ipynb
+++ b/src/Sonnets/Training/Sonnet_generator.ipynb
@@ -17,6 +17,7 @@
   {
    "source": [
     "### 1.0 Loading the data\n",
+    "<hr/>\n",
     "Let's start with loading the actual data and seeing a small sample of it, say the first 300 characters."
    ],
    "cell_type": "markdown",
@@ -44,7 +45,8 @@
   {
    "source": [
     "### 2.0 Load the packages\n",
-    "Remeber to check the requirements file for packages"
+    "<hr/>\n",
+    "Remeber to check the requirements file for packages used."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -92,7 +94,8 @@
   },
   {
    "source": [
-    "### 3.0 Tokenizing the traing data"
+    "### 3.0 Tokenizing the traing data\n",
+    "<hr/>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -121,6 +124,8 @@
   {
    "source": [
     "### 4.0 Preparing the data for training:\n",
+    "<hr/>\n",
+    "\n",
     "This is the most important part of this entire script and can be broadly split into 5 steps. So let's get into it shall we,\n",
     " #### 4.1) Converting text to sequences.\n",
     " #### 4.2) Creating the N_gram sequences.\n",
@@ -129,6 +134,20 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
