explaination for the data preparation for training

--- a/src/Sonnets/Training/Sonnet_generator.ipynb
+++ b/src/Sonnets/Training/Sonnet_generator.ipynb
@@ -18,6 +18,7 @@
    "source": [
     "### 1.0 Loading the data\n",
     "<hr/>\n",
+    "\n",
     "Let's start with loading the actual data and seeing a small sample of it, say the first 300 characters."
    ],
    "cell_type": "markdown",
@@ -46,6 +47,7 @@
    "source": [
     "### 2.0 Load the packages\n",
     "<hr/>\n",
+    "\n",
     "Remeber to check the requirements file for packages used."
    ],
    "cell_type": "markdown",
@@ -95,7 +97,7 @@
   {
    "source": [
     "### 3.0 Tokenizing the traing data\n",
-    "<hr/>"
+    "<hr/>\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -127,13 +129,63 @@
     "<hr/>\n",
     "\n",
     "This is the most important part of this entire script and can be broadly split into 5 steps. So let's get into it shall we,\n",
+    "\n",
+    "For each line in the txt file (training data):\n",
     " #### 4.1) Converting text to sequences.\n",
+    "\n",
+    "   You can do that using the following:\n",
+    "\n",
+    "    tokenizer.texts_to_sequences([line])\n",
+    "    \n",
+    "   Once you convert the text to sequence the output of it would look some thing like the following:\n",
+    "\n",
+    "    [34, 417, 877, 166, 213, 517]\n",
+    " \n",
     " #### 4.2) Creating the N_gram sequences.\n",
+    "   Now to create N-gram sequences that would look like \n",
+    "\n",
+    "    [34,417]\n",
+    "    [34,417,877] \n",
+    "    [34,417,877,166]\n",
+    "    [34,417,877,166,213]\n",
+    "    [34,417,877,166,213,517]\n",
+    "\n",
     " #### 4.3) Finding the max sequence length and the padding the rest.\n",
-    " #### 4.4) Creating the predictors and the labels."
+    "\n",
+    "   Here you are goning to do pre padding using:\n",
+    "\n",
+    "    pad_sequences(input_sequences, maxlen=max_sequence_len, padding='pre')\n",
+    "\n",
+    "   Once you are done it would look something like this:\n",
+    "\n",
+    "    [0,0,0,0,34,417]\n",
+    "    [0,0,0,34,417,877] \n",
+    "    [0,0,34,417,877,166]\n",
+    "    [0,34,417,877,166,213]\n",
+    "    [34,417,877,166,213,517]\n",
+    "\n",
+    " #### 4.4) Creating the predictors and the labels.\n",
+    "\n",
+    "   This is where the most interesting part comes in, we are goin to consider the last element in the N_gram sequence arrays we got above as labes and the rest of the array as the predictors:\n",
+    "    \n",
+    "    PREDICTORS                      LABLES\n",
+    "    [0,0,0,0,34]                     417\n",
+    "    [0,0,0,34,417]                   877\n",
+    "    [0,0,34,417,877]                 166\n",
+    "    [0,34,417,877,166]               213\n",
+    "    [34,417,877,166,213]             517\n",
+    "\n",
+    "The code for all of the above steps are concatenated together in the next code block:\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
