--- a/src/Sonnets/Training/Sonnet_generator.ipynb
+++ b/src/Sonnets/Training/Sonnet_generator.ipynb
@@ -18,7 +18,6 @@
    "source": [
     "### 1.0 Loading the data\n",
     "<hr/>\n",
-    "\n",
     "Let's start with loading the actual data and seeing a small sample of it, say the first 300 characters."
    ],
    "cell_type": "markdown",
@@ -125,9 +124,8 @@
   },
   {
    "source": [
-    "### 4.0 Preparing the data for training:\n",
+    "### 4.0 Preparing the data for training\n",
     "<hr/>\n",
-    "\n",
     "This is the most important part of this entire script and can be broadly split into 5 steps. So let's get into it shall we,\n",
     "\n",
     "For each line in the txt file (training data):\n",
