added code for data preparation

--- a/src/Sonnets/Training/Sonnet_generator.ipynb
+++ b/src/Sonnets/Training/Sonnet_generator.ipynb
@@ -46,7 +46,6 @@
    "source": [
     "### 2.0 Load the packages\n",
     "<hr/>\n",
-    "\n",
     "Remeber to check the requirements file for packages used."
    ],
    "cell_type": "markdown",
@@ -96,7 +95,7 @@
   {
    "source": [
     "### 3.0 Tokenizing the traing data\n",
-    "<hr/>\n"
+    "<hr/>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -180,10 +179,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# create input sequences using list of tokens\n",
+    "input_sequences = []\n",
+    "for line in corpus:\n",
+    "\ttoken_list = tokenizer.texts_to_sequences([line])[0]\n",
+    "\tfor i in range(1, len(token_list)):\n",
+    "\t\tn_gram_sequence = token_list[:i+1]\n",
+    "\t\tinput_sequences.append(n_gram_sequence)\n",
+    "\n",
+    "# pad sequences \n",
+    "max_sequence_len = max([len(x) for x in input_sequences])\n",
+    "input_sequences = np.array(pad_sequences(input_sequences, maxlen=max_sequence_len, padding='pre'))\n",
+    "\n",
+    "# create predictors and label\n",
+    "predictors, label = input_sequences[:,:-1],input_sequences[:,-1]\n",
+    "\n",
+    "label = ku.to_categorical(label, num_classes=total_words)"
+   ]
+  },
+  {
+   "source": [
+    "### 5.0 Creating the model"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
