--- a/src/Sonnets/Training/Sonnet_generator.ipynb
+++ b/src/Sonnets/Training/Sonnet_generator.ipynb
@@ -708,6 +708,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "elFhkO5k88-n"
+      },
+      "source": [
+        "#### 8.0 Conclusion\n",
+        "This was done using word embeddings in the next notbook lets see how character level embedding measure up against this approach."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "wVmRLZqS2o0o"
